# FlexiOS

./: .gitmodules  rust-toolchain.toml  virt.dtb  virt.dts
kernel/: .gitignore  Cargo.toml  Makefile  arrch64.json  build.rs  fs.img  kernel8.img  virt.dts
kernel/src/: addr_space.rs  addr_type.rs  consts.rs  frame.rs  frame_allocator.rs  heap_allocator.rs  link_app.S  linker.ld  loader.rs  logging.rs  main.rs  mm_type.rs  panic_wait.rs  scheduler.rs  thread.rs
kernel/src/arch/aarch64/: barrier.rs  cache.rs  consts.rs  cpu.rs  mm.rs  mm_type.rs  mod.rs  sched.rs  swtch.rs
kernel/src/arch/aarch64/board/raspi/: mod.rs
kernel/src/arch/aarch64/boot/: boot.S  boot.s  mod.rs
kernel/src/arch/aarch64/exception/: exception_table.S  irq.S  mod.rs  syscall_wrapper.rs
kernel/src/arch/aarch64/paging/: mod.rs  page.rs  page_mode.rs  page_table.rs
kernel/src/arch/aarch64/sched/: mod.rs
kernel/src/driver/: console.rs  dtb.S  gic.rs  mod.rs  pl011.rs  timer.rs  virtio_impl.rs
kernel/src/mm/: address.rs  frame.rs  frame_alloc.rs  mod.rs  page.rs  page_mode.rs  page_space.rs
kernel/src/syscall/: mod.rs
kernel/src/thread/: cpu.rs  kernel_stack.rs  mod.rs  scheduler.rs  thread_ctx.rs  thread_swtch.S
user/: Cargo.toml  Makefile
user/.cargo/: config
user/src/: console.rs  lib.rs  linker.ld  syscall.rs
