[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

# Platform specific dependencies
cortex-a = { version = "7.x.x" }
log= "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
tock-registers = "0.7.0"
bcm2837 = { git = "https://github.com/rcore-os/bcm2837", version = "2.5.1", optional = true }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
virtio-drivers = { path="../virtio-drivers" }
zerocopy = "0.6.1"
xmas-elf = "0.7.0"
ruspiro-lock = "0.5.0"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false